kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-app-ingress
  namespace: prod
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "example.localhost"
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: laravel-app
            port:
              number: 80
